--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* @media (min-width: 320px) {
+  html {
+    font-size: calc(14px + (16 - 14) * ((100vw - 320px) / (640 - 320)));
+  }
+}
+
+@media (min-width: 640px) {
+  html {
+    font-size: 16px;
+  }
+} */
