--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+.clip-path {
+  clip-path: inset(0 0 0 0);
+}
 /* @media (min-width: 320px) {
   html {
     font-size: calc(14px + (16 - 14) * ((100vw - 320px) / (640 - 320)));
