--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,6 +6,18 @@
   clip-path: inset(0 0 0 0);
 }
 
+@media (min-width: 768px) {
+  .custom-grid-about {
+    display: grid;
+    grid-template-columns: calc(50% - 1rem) calc(50% + 1rem);
+  }
+
+  .custom-grid-why {
+    display: grid;
+    grid-template-columns: calc(50% + 1rem) calc(50% - 1rem);
+  }
+}
+
 /* @media (min-width: 320px) {
   html {
     font-size: calc(14px + (16 - 14) * ((100vw - 320px) / (640 - 320)));
