--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -18,10 +18,21 @@
   }
 }
 
-@media (min-width: 1280px) {
+@media (min-width: 1920px) {
   html {
     @apply container;
   }
+}
+
+.element-with-scrollbar {
+  overflow-y: auto;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+/* Hide scrollbar for Webkit browsers */
+.element-with-scrollbar::-webkit-scrollbar {
+  display: none;
 }
 
 /* @media (min-width: 320px) {
